--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@types/node": "^20.9.0"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
-    "playwright": "^1.48.0"
+    "playwright": "^1.48.1",
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   }
 }
